fix bug where login buttons weren't visible.

--- a/app/client/style.less
+++ b/app/client/style.less
@@ -4,6 +4,7 @@
 
 #login-buttons {
   float: right;
+  margin-right: 200px;
 }
 
 h1 {
